--- a/README.mdx
+++ b/README.mdx
@@ -1,3 +1,22 @@
+```
+⣿⣿⡆
+⣿⣿⡇
+⣿⣿⡇
+```
+```ansi
+[31m█[32m█[33m█[34m█[0m
+```
+```html
+<svg width="100" height="100">
+  <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+</svg>
+```
+```
+   (\_/)
+  (='.'=)
+  (")_(")
+```
+
 <div>
 
 <div  width="50%">
